src/parse/snapshots/protox__parse__tests__parse_oneof-9.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_oneof() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "a message field, option or '}'",
            found: Comma,
            span: 12..13,
        },
    ],
)
