src/parse/snapshots/protox__parse__tests__parse_option-13.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Option {
        body: OptionBody {
            name: [
                Ident(
                    Ident {
                        value: "quz",
                        span: 7..10,
                    },
                ),
                Extension(
                    FullIdent {
                        parts: [
                            Ident {
                                value: "bar",
                                span: 12..15,
                            },
                        ],
                    },
                    11..16,
                ),
            ],
            value: Aggregate(
                Message {
                    fields: [
                        Field {
                            name: Ident(
                                Ident {
                                    value: "foo",
                                    span: 21..24,
                                },
                            ),
                            value: ScalarList(
                                [
                                    Ident {
                                        negative: false,
                                        ident: Ident {
                                            value: "blah",
                                            span: 27..31,
                                        },
                                        span: 27..31,
                                    },
                                ],
                                26..32,
                            ),
                            span: 21..32,
                        },
                    ],
                },
                19..34,
            ),
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..35,
    },
)
