src/parse/snapshots/protox__parse__tests__parse_option-16.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Option {
        body: OptionBody {
            name: [
                Ident(
                    Ident {
                        value: "optimize_for",
                        span: 7..19,
                    },
                ),
            ],
            value: FullIdent(
                FullIdent {
                    parts: [
                        Ident {
                            value: "message",
                            span: 22..29,
                        },
                    ],
                },
            ),
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..30,
    },
)
